eks/k8s/activemq/service-stomp.yaml
apiVersion: v1
kind: Service
metadata:
  name: activemq-stomp
  annotations:
    external-dns.alpha.kubernetes.io/hostname: hedrickbt-activemq-stomp.poc.k8s.rainhail.com
spec:
  type: LoadBalancer
  selector:
    app: activemq
  ports:
  - name: stomp
    port: 61613
    targetPort: 61613
