eks/k8s/activemq/service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: activemq-web
spec:
  selector:
    app: activemq-app
  ports:
  - name: http
    port: 80
    targetPort: 8161
